// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col スナップショット Col_ 1`] = `
<body>
  <div>
    <div
      class="flex_flexStyle__zqca9ti flex_flexStyle_align_stretch__zqca9tu flex_flexStyle_variants_align_stretch__zqca9t9 flex_flexStyle_direction_column__zqca9tk flex_flexStyle_gap_100__zqca9ty flex_flexStyle_variants_gap_100__zqca9td flex_flexStyle_justify_flexStart__zqca9tl flex_flexStyle_variants_justify_flexStart__zqca9t0"
    >
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 260px; height: 260px; display: flex; align-items: center; justify-content: center;"
      >
        260px
         x 
        260px
      </div>
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 140px; height: 140px; display: flex; align-items: center; justify-content: center;"
      >
        140px
         x 
        140px
      </div>
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 200px; height: 200px; display: flex; align-items: center; justify-content: center;"
      >
        200px
         x 
        200px
      </div>
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: auto; height: 100px; display: flex; align-items: center; justify-content: center;"
      >
        auto
         x 
        100px
      </div>
    </div>
  </div>
</body>
`;

exports[`Col スナップショット ColWithItem 1`] = `
<body>
  <div>
    <div
      class="flex_flexStyle__zqca9ti flex_flexStyle_align_stretch__zqca9tu flex_flexStyle_variants_align_stretch__zqca9t9 flex_flexStyle_direction_column__zqca9tk flex_flexStyle_gap_100__zqca9ty flex_flexStyle_variants_gap_100__zqca9td flex_flexStyle_justify_flexStart__zqca9tl flex_flexStyle_variants_justify_flexStart__zqca9t0"
    >
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 260px; height: 260px; display: flex; align-items: center; justify-content: center;"
      >
        260px
         x 
        260px
      </div>
      <div
        class="flex_flexItemStyle__zqca9t19 flex_flexItemStyle_align_center__zqca9t1f flex_flexItemStyle_variants_align_center__zqca9t15"
      >
        <div
          style="border-radius: var(--radius-100__1874wf71g); width: 100%; height: 140px; display: flex; align-items: center; justify-content: center;"
        >
          100%
           x 
          140px
        </div>
      </div>
      <div
        class="flex_flexItemStyle__zqca9t19 flex_flexItemStyle_align_stretch__zqca9t1h flex_flexItemStyle_variants_align_stretch__zqca9t17"
      >
        <div
          style="border-radius: var(--radius-100__1874wf71g); width: 100%; height: 200px; display: flex; align-items: center; justify-content: center;"
        >
          100%
           x 
          200px
        </div>
      </div>
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: auto; height: 100px; display: flex; align-items: center; justify-content: center;"
      >
        auto
         x 
        100px
      </div>
    </div>
  </div>
</body>
`;
